# dji_mission_planner

dji_mission_interfaces/: CMakeLists.txt  package.xml
dji_mission_interfaces/action/: DescendAndCenter.action  FollowVehicle.action  LandOnPad.action
drone_landing_planner/: CMakeLists.txt  package.xml
drone_landing_planner/config/: params.yaml
drone_landing_planner/include/drone_landing_planner/: descend_and_center.hpp  drone_landing.hpp  init_flight_control.hpp  landing_pad_controller.hpp
drone_landing_planner/launch/: drone_landing.launch.xml
drone_landing_planner/src/: descend_and_center.cpp  drone_landing.cpp  drone_landing_testing.cpp  init_flight_control.cpp  initial_testing.cpp  landing_pad_controller.cpp  main.cpp
pid_package/: CMakeLists.txt  package.xml
pid_package/src/: pid.cpp
vehicle_following_planner/: CMakeLists.txt  README.md  package.xml
vehicle_following_planner/config/: params.yaml
vehicle_following_planner/include/vehicle_following_planner/: gps_to_ned.hpp  vehicle_following.hpp
vehicle_following_planner/launch/: vehicle_following.launch.xml
vehicle_following_planner/src/: gps_to_ned.cpp  vehicle_following.cpp
